BIG-20064: Fix quick view cart showing off-screen

--- a/assets/scss/components/foundation/dropdown/_dropdown.scss
+++ b/assets/scss/components/foundation/dropdown/_dropdown.scss
@@ -9,6 +9,12 @@
     position: absolute;
 }
 
+.dropdown-menu {
+    &.is-loading {
+        @include loadingOverlay-container();
+    }
+}
+
 .dropdown-menu-item {
     text-align: left;
 
