--- a/assets/scss/components/stencil/navUser/_navUser.scss
+++ b/assets/scss/components/stencil/navUser/_navUser.scss
@@ -24,13 +24,11 @@
 
     .dropdown-menu {
         background-color: $navUser-dropdown-menu-backgroundColor;
-        border: 1px solid container("borderColor", "dark");
+        border: 1px solid container("borderColor");
         box-shadow: container("dropShadow");
+        position: absolute;
 
         &.is-open {
-            margin-left: spacing("half");
-            position: relative;
-
             &:before {
                 @include css-triangle(
                     $triangle-direction: "bottom",
@@ -89,6 +87,21 @@
 
 .navUser-item--cart {
     display: block;
+
+    .dropdown-menu.is-open {
+        &:before,
+        &:after {
+            left: auto;
+        }
+
+        &:before {
+            right: spacing("single") - remCalc(2);
+        }
+
+        &:after {
+            right: spacing("single");
+        }
+    }
 }
 
 .navUser-item--compare {
